--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pittaya-theme",
   "displayName": "Pittaya Theme",
-  "description": "A theme inspired by the pittaya fruit.",
+  "description": "Um tema dark minimalista com a cor característica da Pittaya (#ff637e)",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.108.1"
