feat: enhance Pittaya Theme with semantic highlighting support, add MIT License, and update package metadata for improved discoverability and publishing readiness

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,12 @@
 .vscode/**
 .vscode-test/**
 .gitignore
+.gitattributes
 vsc-extension-quickstart.md
+TESTING.md
+COLOR-GUIDE.md
+*.md
+!README.md
+!CHANGELOG.md
+.git/**
+node_modules/**
