feat: add complete Go language support with comprehensive syntax highlighting and documentation updates
Introduce extensive Go syntax highlighting, including package declarations, keywords, function and method names, and concurrency primitives. Update documentation in COLOR-GUIDE.md, README.md, and TESTING.md to reflect Go support. Enhance package.json with relevant keywords and update theme description to highlight Go optimization.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pittaya-theme",
   "displayName": "Pittaya Theme",
-  "description": "A minimalist theme for VS Code inspired by the vibrant colors of dragon fruit (dark and light versions)",
-  "version": "0.2.0",
+  "description": "A minimalist theme for VS Code inspired by the vibrant colors of dragon fruit. Optimized for TypeScript, React, Python, and Go development (dark and light versions)",
+  "version": "0.2.1",
   "publisher": "pittaya-org",
   "engines": {
     "vscode": "^1.80.0"
@@ -18,6 +18,8 @@
     "typescript",
     "react",
     "python",
+    "go",
+    "golang",
     "cursor",
     "windsurf",
     "vscodium"
